--- a/index.css
+++ b/index.css
@@ -1,1 +1,11 @@
-
+body, html {
+    height: 100%;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-image: url('images/echidna.PNG'); /* Cambiar a la ruta de tu imagen */
+    background-size: cover; /* Ajusta la imagen para cubrir todo el fondo */
+    background-position: center; /* Centra la imagen */
+    background-repeat: no-repeat; /* No repita la imagen */
+}
